Add support for handling special cases for price and date ranges

BUG:489484
FIXED-IN:8.2